miniav_ffi/miniav_c/include/miniav_capture.h


// --- Buffer Callback ---
typedef void (*MiniAVBufferCallback)(const MiniAVBuffer *buffer,
                                     void *user_data);


// --- Device Change Notification API ---
//
// All MiniAV_*_SetDeviceChangeCallback / SetDisplayChangeCallback /
// SetWindowChangeCallback / SetGamepadChangeCallback functions follow the
// same contract:
//   - Pass a non-NULL callback to subscribe.
//   - Pass NULL to unsubscribe (and tear down any background watcher).
//   - Calling subscribe again replaces the previous callback.
//   - Implementation may be polling-based; events typically arrive within
//     1-2 seconds of the underlying OS change.
//   - The callback runs on a background thread; do not call back into MiniAV
//     APIs that may block waiting for the same thread.
typedef enum {
  MINIAV_DEVICE_CHANGE_ADDED = 0,
  MINIAV_DEVICE_CHANGE_REMOVED = 1,
  MINIAV_DEVICE_CHANGE_DEFAULT_CHANGED = 2,
} MiniAVDeviceChangeEvent;


typedef void (*MiniAVDeviceChangeCallback)(MiniAVDeviceChangeEvent event,
                                           const MiniAVDeviceInfo *device,
                                           void *user_data);


// --- Per-Context Device-Lost Callback ---
//
// Fires when the device a capture context is currently using becomes
// unavailable mid-stream (unplugged, disabled, format renegotiation failed,
// GPU reset, etc.). Capture is automatically stopped and the context becomes
// unusable; the application should call MiniAV_*_DestroyContext and
// reconfigure if needed.
//
// The callback runs on an internal capture/notification/loop thread; treat it
// like any other capture-thread callback. IMPORTANT: do NOT synchronously
// call MiniAV_*_StopCapture / MiniAV_*_DestroyContext from inside the
// callback — several backends join or drain the very thread/queue delivering
// it, which would self-deadlock. Post the teardown to your own executor
// instead. (The Dart FFI shim satisfies this automatically: its
// NativeCallable.listener delivery is asynchronous.)
typedef void (*MiniAVContextLostCallback)(int /*MiniAVResultCode*/ reason,
                                          void *user_data);


// Device change subscription. Pass NULL callback to unsubscribe.
MINIAV_API MiniAVResultCode MiniAV_Camera_SetDeviceChangeCallback(
    MiniAVDeviceChangeCallback callback, void *user_data);

// Per-context lost notification. Pass NULL callback to unsubscribe.
MINIAV_API MiniAVResultCode MiniAV_Camera_SetContextLostCallback(
    MiniAVCameraContextHandle context, MiniAVContextLostCallback callback,
    void *user_data);


// Subscribe for display add/remove notifications. Pass NULL to unsubscribe.
MINIAV_API MiniAVResultCode MiniAV_Screen_SetDisplayChangeCallback(
    MiniAVDeviceChangeCallback callback, void *user_data);

// Subscribe for window add/remove notifications. Pass NULL to unsubscribe.
// Polling is comparatively heavy on Windows because EnumWindows must run
// each cycle; subscribe sparingly.
MINIAV_API MiniAVResultCode MiniAV_Screen_SetWindowChangeCallback(
    MiniAVDeviceChangeCallback callback, void *user_data);

// Per-context lost notification. Fires e.g. when a captured display is
// disconnected or the captured window is closed.
MINIAV_API MiniAVResultCode MiniAV_Screen_SetContextLostCallback(
    MiniAVScreenContextHandle context, MiniAVContextLostCallback callback,
    void *user_data);


// Subscribe for audio capture device add/remove notifications.
MINIAV_API MiniAVResultCode MiniAV_Audio_SetDeviceChangeCallback(
    MiniAVDeviceChangeCallback callback, void *user_data);

// Per-context lost notification (microphone unplugged, format renegotiation
// failed, etc.).
MINIAV_API MiniAVResultCode MiniAV_Audio_SetContextLostCallback(
    MiniAVAudioContextHandle context, MiniAVContextLostCallback callback,
    void *user_data);

MINIAV_API MiniAVResultCode
MiniAV_Loopback_StartCapture(MiniAVLoopbackContextHandle context,
                             MiniAVBufferCallback callback, void *user_data);

MINIAV_API MiniAVResultCode
MiniAV_Loopback_StopCapture(MiniAVLoopbackContextHandle context);


// Subscribe for loopback target add/remove notifications. The watcher emits
// for the default system-audio target type; use MiniAV_Loopback_EnumerateTargets
// to inspect the current full list at any time.
MINIAV_API MiniAVResultCode MiniAV_Loopback_SetDeviceChangeCallback(
    MiniAVDeviceChangeCallback callback, void *user_data);

// Per-context lost notification (e.g. WASAPI returned AUDCLNT_E_DEVICE_INVALIDATED
// because the captured render endpoint was unplugged).
MINIAV_API MiniAVResultCode MiniAV_Loopback_SetContextLostCallback(
    MiniAVLoopbackContextHandle context, MiniAVContextLostCallback callback,
    void *user_data);


// --- Input Capture API ---
MINIAV_API MiniAVResultCode
MiniAV_Input_EnumerateGamepads(MiniAVDeviceInfo **devices, uint32_t *count);

MINIAV_API MiniAVResultCode
MiniAV_Input_CreateContext(MiniAVInputContextHandle *context);

MINIAV_API MiniAVResultCode
MiniAV_Input_DestroyContext(MiniAVInputContextHandle context);

MINIAV_API MiniAVResultCode
MiniAV_Input_Configure(MiniAVInputContextHandle context,
                       const MiniAVInputConfig *config);

MINIAV_API MiniAVResultCode
MiniAV_Input_StartCapture(MiniAVInputContextHandle context);

MINIAV_API MiniAVResultCode
MiniAV_Input_StopCapture(MiniAVInputContextHandle context);


// Subscribe for gamepad add/remove notifications.
MINIAV_API MiniAVResultCode MiniAV_Input_SetGamepadChangeCallback(
    MiniAVDeviceChangeCallback callback, void *user_data);


// --- Input Injection API (sink twin of input capture) ---
//
// Replays synthetic keyboard/mouse events onto the LOCAL machine — the
// server side of a remote-desktop stack. Injection is SYNCHRONOUS: there is
// no capture thread and no callback; each Inject_* call performs the event.
// The same MiniAVKeyboardEvent / MiniAVMouseEvent structs used by capture are
// replayed here, so a captured event can be injected verbatim.
//
// Codes are PLATFORM-NATIVE (Windows VK / macOS keycode / Linux evdev), matching
// what capture reports; translating between platforms is the caller's job.
//
// PERMISSIONS (miniAV never prompts — MINIAV_ERROR_PERMISSION_DENIED otherwise):
//   - macOS: the process needs Accessibility approval (System Settings >
//     Privacy & Security > Accessibility).
//   - Linux: the process needs write access to /dev/uinput (a udev rule or
//     running as root); the backend creates a virtual input device.
//   - Windows: no special permission (SendInput); UIPI may block injection
//     into higher-integrity windows.
//
// v1 injects KEYBOARD and MOUSE. Gamepad injection needs a virtual-gamepad
// driver (ViGEm on Windows, uinput on Linux, unsupported on macOS) and is not
// included yet.
MINIAV_API MiniAVResultCode
MiniAV_Inject_CreateContext(MiniAVInjectContextHandle *context);

MINIAV_API MiniAVResultCode
MiniAV_Inject_DestroyContext(MiniAVInjectContextHandle context);

// Prepare the injector for the given MiniAVInputType bitmask (keyboard/mouse).
// On Linux this creates the backing uinput virtual device.
MINIAV_API MiniAVResultCode
MiniAV_Inject_Configure(MiniAVInjectContextHandle context, uint32_t input_types);

MINIAV_API MiniAVResultCode
MiniAV_Inject_Keyboard(MiniAVInjectContextHandle context,
                       const MiniAVKeyboardEvent *event);

MINIAV_API MiniAVResultCode
MiniAV_Inject_Mouse(MiniAVInjectContextHandle context,
                    const MiniAVMouseEvent *event);