miniav_ffi/miniav_c/include/miniav_types.h


// --- Result Codes ---
typedef enum {
  MINIAV_SUCCESS = 0,
  MINIAV_ERROR_UNKNOWN = -1,
  MINIAV_ERROR_INVALID_ARG = -2,
  MINIAV_ERROR_NOT_INITIALIZED = -3,
  MINIAV_ERROR_SYSTEM_CALL_FAILED = -4,
  MINIAV_ERROR_NOT_SUPPORTED = -5,
  MINIAV_ERROR_BUFFER_TOO_SMALL = -6,
  MINIAV_ERROR_INVALID_HANDLE = -7,
  MINIAV_ERROR_DEVICE_NOT_FOUND = -8,
  MINIAV_ERROR_DEVICE_BUSY = -9,
  MINIAV_ERROR_ALREADY_RUNNING = -10,
  MINIAV_ERROR_NOT_RUNNING = -11,
  MINIAV_ERROR_OUT_OF_MEMORY = -12,
  MINIAV_ERROR_TIMEOUT = -13,
  MINIAV_ERROR_DEVICE_LOST = -14,
  MINIAV_ERROR_FORMAT_NOT_SUPPORTED = -15,
  MINIAV_ERROR_INVALID_OPERATION = -16,
  MINIAV_ERROR_NOT_IMPLEMENTED = -17,
  MINIAV_ERROR_NOT_CONFIGURED = -18,
  MINIAV_ERROR_PORTAL_FAILED = -19,
  MINIAV_ERROR_STREAM_FAILED = -20,
  MINIAV_ERROR_PORTAL_CLOSED = -21,
  MINIAV_ERROR_USER_CANCELLED = -22,
  // The OS denied a required runtime permission (camera/microphone/screen
  // consent, Accessibility/Input Monitoring, ...). miniAV never triggers
  // permission PROMPTS itself — request permission app-side first, then
  // configure. Mobile backends map their platform denial errors here.
  MINIAV_ERROR_PERMISSION_DENIED = -23,
} MiniAVResultCode;

typedef struct {
  char device_id[MINIAV_DEVICE_ID_MAX_LEN]; // Platform-specific unique
                                            // identifier
  char name[MINIAV_DEVICE_NAME_MAX_LEN];    // Human-readable name (UTF-8)
  bool is_default; // True if this is the default device
} MiniAVDeviceInfo;


// --- Opaque Handles ---
typedef struct MiniAVCameraContext *MiniAVCameraContextHandle;

typedef struct MiniAVScreenContext *MiniAVScreenContextHandle;

typedef struct MiniAVAudioContext *MiniAVAudioContextHandle;

typedef struct MiniAVLoopbackContext *MiniAVLoopbackContextHandle;

typedef struct MiniAVInputContext *MiniAVInputContextHandle;

typedef struct MiniAVInjectContext *MiniAVInjectContextHandle;


// Keyboard action
typedef enum {
  MINIAV_KEY_ACTION_DOWN = 0,
  MINIAV_KEY_ACTION_UP = 1,
} MiniAVKeyAction;


// Mouse action
typedef enum {
  MINIAV_MOUSE_ACTION_MOVE = 0,
  MINIAV_MOUSE_ACTION_BUTTON_DOWN = 1,
  MINIAV_MOUSE_ACTION_BUTTON_UP = 2,
  MINIAV_MOUSE_ACTION_WHEEL = 3,
} MiniAVMouseAction;


// Mouse button identifiers
typedef enum {
  MINIAV_MOUSE_BUTTON_NONE = 0,
  MINIAV_MOUSE_BUTTON_LEFT = 1,
  MINIAV_MOUSE_BUTTON_RIGHT = 2,
  MINIAV_MOUSE_BUTTON_MIDDLE = 3,
  MINIAV_MOUSE_BUTTON_X1 = 4,
  MINIAV_MOUSE_BUTTON_X2 = 5,
} MiniAVMouseButton;


// Keyboard event
typedef struct {
  uint64_t timestamp_us;
  uint32_t key_code;      // Platform virtual key code
  uint32_t scan_code;     // Hardware scan code
  MiniAVKeyAction action;
} MiniAVKeyboardEvent;


// Mouse event. Used by BOTH input capture (source) and input injection (sink);
// for injection the same struct is replayed onto the local machine.
typedef struct {
  uint64_t timestamp_us;
  int32_t x;              // Absolute screen X
  int32_t y;              // Absolute screen Y
  int32_t delta_x;        // Relative movement X
  int32_t delta_y;        // Relative movement Y
  int32_t wheel_delta;    // Vertical scroll wheel delta (+ = up/away)
  int32_t wheel_delta_x;  // Horizontal scroll wheel delta (+ = right)
  MiniAVMouseAction action;
  MiniAVMouseButton button;
  // Capture always reports absolute coords, so it sets this true. For
  // injection: true = MOVE to absolute (x, y); false = MOVE by (delta_x,
  // delta_y). Ignored for BUTTON_* / WHEEL actions.
  bool is_absolute;
} MiniAVMouseEvent;


// How the backend prepares `screen_orientation`.
typedef enum {
  MINIAV_MOTION_MODE_RAW_DEVICE_FRAME = 0,     // screen_orientation == orientation
  MINIAV_MOTION_MODE_FUSED_SCREEN_STABLE = 1,  // remapped into the display frame
} MiniAVMotionMode;


// Typed input callbacks
typedef void (*MiniAVKeyboardCallback)(const MiniAVKeyboardEvent *event,
                                       void *user_data);

typedef void (*MiniAVMouseCallback)(const MiniAVMouseEvent *event,
                                    void *user_data);

typedef void (*MiniAVGamepadCallback)(const MiniAVGamepadEvent *event,
                                      void *user_data);

typedef void (*MiniAVMotionCallback)(const MiniAVMotionEvent *event,
                                     void *user_data);


// Input configuration. NOTE: motion fields are APPENDED so existing
// keyboard/mouse/gamepad byte offsets are unchanged (ABI-additive).
typedef struct {
  uint32_t input_types;         // Bitmask of MiniAVInputType
  uint32_t mouse_throttle_hz;   // 0 = no throttle, default = 60
  uint32_t gamepad_poll_hz;     // 0 = default (60)
  MiniAVKeyboardCallback keyboard_callback;
  MiniAVMouseCallback mouse_callback;
  MiniAVGamepadCallback gamepad_callback;
  void *user_data;
  uint32_t motion_rate_hz;      // 0 = default (60); web/most sensors cap at 60
  MiniAVMotionMode motion_mode; // how screen_orientation is prepared
  MiniAVMotionCallback motion_callback;
} MiniAVInputConfig;