miniav_ffi/lib/miniav_ffi_bindings.dart


@ffi.Native<
  ffi.Int Function(
    MiniAVLoopbackContextHandle,
    MiniAVBufferCallback,
    ffi.Pointer<ffi.Void>,
  )
>(symbol: 'MiniAV_Loopback_StartCapture')
external int _MiniAV_Loopback_StartCapture(
  MiniAVLoopbackContextHandle context,
  MiniAVBufferCallback callback,
  ffi.Pointer<ffi.Void> user_data,
);

MiniAVResultCode MiniAV_Loopback_StartCapture(
  MiniAVLoopbackContextHandle context,
  MiniAVBufferCallback callback,
  ffi.Pointer<ffi.Void> user_data,
) => MiniAVResultCode.fromValue(
  _MiniAV_Loopback_StartCapture(context, callback, user_data),
);

@ffi.Native<ffi.Int Function(MiniAVLoopbackContextHandle)>(
  symbol: 'MiniAV_Loopback_StopCapture',
)
external int _MiniAV_Loopback_StopCapture(MiniAVLoopbackContextHandle context);

MiniAVResultCode MiniAV_Loopback_StopCapture(
  MiniAVLoopbackContextHandle context,
) => MiniAVResultCode.fromValue(_MiniAV_Loopback_StopCapture(context));

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Pointer<MiniAVDeviceInfo>>,
    ffi.Pointer<ffi.Uint32>,
  )
>(symbol: 'MiniAV_Input_EnumerateGamepads')
external int _MiniAV_Input_EnumerateGamepads(
  ffi.Pointer<ffi.Pointer<MiniAVDeviceInfo>> devices,
  ffi.Pointer<ffi.Uint32> count,
);

MiniAVResultCode MiniAV_Input_EnumerateGamepads(
  ffi.Pointer<ffi.Pointer<MiniAVDeviceInfo>> devices,
  ffi.Pointer<ffi.Uint32> count,
) =>
    MiniAVResultCode.fromValue(_MiniAV_Input_EnumerateGamepads(devices, count));

@ffi.Native<ffi.Int Function(ffi.Pointer<MiniAVInputContextHandle>)>(
  symbol: 'MiniAV_Input_CreateContext',
)
external int _MiniAV_Input_CreateContext(
  ffi.Pointer<MiniAVInputContextHandle> context,
);

MiniAVResultCode MiniAV_Input_CreateContext(
  ffi.Pointer<MiniAVInputContextHandle> context,
) => MiniAVResultCode.fromValue(_MiniAV_Input_CreateContext(context));

@ffi.Native<ffi.Int Function(MiniAVInputContextHandle)>(
  symbol: 'MiniAV_Input_DestroyContext',
)
external int _MiniAV_Input_DestroyContext(MiniAVInputContextHandle context);

MiniAVResultCode MiniAV_Input_DestroyContext(
  MiniAVInputContextHandle context,
) => MiniAVResultCode.fromValue(_MiniAV_Input_DestroyContext(context));

@ffi.Native<
  ffi.Int Function(MiniAVInputContextHandle, ffi.Pointer<MiniAVInputConfig>)
>(symbol: 'MiniAV_Input_Configure')
external int _MiniAV_Input_Configure(
  MiniAVInputContextHandle context,
  ffi.Pointer<MiniAVInputConfig> config,
);

MiniAVResultCode MiniAV_Input_Configure(
  MiniAVInputContextHandle context,
  ffi.Pointer<MiniAVInputConfig> config,
) => MiniAVResultCode.fromValue(_MiniAV_Input_Configure(context, config));

@ffi.Native<ffi.Int Function(MiniAVInputContextHandle)>(
  symbol: 'MiniAV_Input_StartCapture',
)
external int _MiniAV_Input_StartCapture(MiniAVInputContextHandle context);

MiniAVResultCode MiniAV_Input_StartCapture(MiniAVInputContextHandle context) =>
    MiniAVResultCode.fromValue(_MiniAV_Input_StartCapture(context));

@ffi.Native<ffi.Int Function(MiniAVInputContextHandle)>(
  symbol: 'MiniAV_Input_StopCapture',
)
external int _MiniAV_Input_StopCapture(MiniAVInputContextHandle context);

MiniAVResultCode MiniAV_Input_StopCapture(MiniAVInputContextHandle context) =>
    MiniAVResultCode.fromValue(_MiniAV_Input_StopCapture(context));

// --- Input Injection ---
@ffi.Native<ffi.Int Function(ffi.Pointer<MiniAVInjectContextHandle>)>(
  symbol: 'MiniAV_Inject_CreateContext',
)
external int _MiniAV_Inject_CreateContext(
  ffi.Pointer<MiniAVInjectContextHandle> context,
);

MiniAVResultCode MiniAV_Inject_CreateContext(
  ffi.Pointer<MiniAVInjectContextHandle> context,
) => MiniAVResultCode.fromValue(_MiniAV_Inject_CreateContext(context));

@ffi.Native<ffi.Int Function(MiniAVInjectContextHandle)>(
  symbol: 'MiniAV_Inject_DestroyContext',
)
external int _MiniAV_Inject_DestroyContext(MiniAVInjectContextHandle context);

MiniAVResultCode MiniAV_Inject_DestroyContext(
  MiniAVInjectContextHandle context,
) => MiniAVResultCode.fromValue(_MiniAV_Inject_DestroyContext(context));

@ffi.Native<ffi.Int Function(MiniAVInjectContextHandle, ffi.Uint32)>(
  symbol: 'MiniAV_Inject_Configure',
)
external int _MiniAV_Inject_Configure(
  MiniAVInjectContextHandle context,
  int input_types,
);

MiniAVResultCode MiniAV_Inject_Configure(
  MiniAVInjectContextHandle context,
  int input_types,
) => MiniAVResultCode.fromValue(
  _MiniAV_Inject_Configure(context, input_types),
);

@ffi.Native<
  ffi.Int Function(MiniAVInjectContextHandle, ffi.Pointer<MiniAVKeyboardEvent>)
>(symbol: 'MiniAV_Inject_Keyboard')
external int _MiniAV_Inject_Keyboard(
  MiniAVInjectContextHandle context,
  ffi.Pointer<MiniAVKeyboardEvent> event,
);

MiniAVResultCode MiniAV_Inject_Keyboard(
  MiniAVInjectContextHandle context,
  ffi.Pointer<MiniAVKeyboardEvent> event,
) => MiniAVResultCode.fromValue(_MiniAV_Inject_Keyboard(context, event));

@ffi.Native<
  ffi.Int Function(MiniAVInjectContextHandle, ffi.Pointer<MiniAVMouseEvent>)
>(symbol: 'MiniAV_Inject_Mouse')
external int _MiniAV_Inject_Mouse(
  MiniAVInjectContextHandle context,
  ffi.Pointer<MiniAVMouseEvent> event,
);

MiniAVResultCode MiniAV_Inject_Mouse(
  MiniAVInjectContextHandle context,
  ffi.Pointer<MiniAVMouseEvent> event,
) => MiniAVResultCode.fromValue(_MiniAV_Inject_Mouse(context, event));

// --- Device change subscription bindings ---

@ffi.Native<
  ffi.Int Function(MiniAVDeviceChangeCallback, ffi.Pointer<ffi.Void>)
>(symbol: 'MiniAV_Camera_SetDeviceChangeCallback')
external int _MiniAV_Camera_SetDeviceChangeCallback(
  MiniAVDeviceChangeCallback callback,
  ffi.Pointer<ffi.Void> user_data,
);
MiniAVResultCode MiniAV_Camera_SetDeviceChangeCallback(
  MiniAVDeviceChangeCallback callback,
  ffi.Pointer<ffi.Void> user_data,
) => MiniAVResultCode.fromValue(
  _MiniAV_Camera_SetDeviceChangeCallback(callback, user_data),
);

@ffi.Native<
  ffi.Int Function(
    MiniAVCameraContextHandle,
    MiniAVContextLostCallback,
    ffi.Pointer<ffi.Void>,
  )
>(symbol: 'MiniAV_Camera_SetContextLostCallback')
external int _MiniAV_Camera_SetContextLostCallback(
  MiniAVCameraContextHandle context,
  MiniAVContextLostCallback callback,
  ffi.Pointer<ffi.Void> user_data,
);
MiniAVResultCode MiniAV_Camera_SetContextLostCallback(
  MiniAVCameraContextHandle context,
  MiniAVContextLostCallback callback,
  ffi.Pointer<ffi.Void> user_data,
) => MiniAVResultCode.fromValue(
  _MiniAV_Camera_SetContextLostCallback(context, callback, user_data),
);

@ffi.Native<
  ffi.Int Function(MiniAVDeviceChangeCallback, ffi.Pointer<ffi.Void>)
>(symbol: 'MiniAV_Audio_SetDeviceChangeCallback')
external int _MiniAV_Audio_SetDeviceChangeCallback(
  MiniAVDeviceChangeCallback callback,
  ffi.Pointer<ffi.Void> user_data,
);
MiniAVResultCode MiniAV_Audio_SetDeviceChangeCallback(
  MiniAVDeviceChangeCallback callback,
  ffi.Pointer<ffi.Void> user_data,
) => MiniAVResultCode.fromValue(
  _MiniAV_Audio_SetDeviceChangeCallback(callback, user_data),
);

@ffi.Native<
  ffi.Int Function(
    MiniAVAudioContextHandle,
    MiniAVContextLostCallback,
    ffi.Pointer<ffi.Void>,
  )
>(symbol: 'MiniAV_Audio_SetContextLostCallback')
external int _MiniAV_Audio_SetContextLostCallback(
  MiniAVAudioContextHandle context,
  MiniAVContextLostCallback callback,
  ffi.Pointer<ffi.Void> user_data,
);
MiniAVResultCode MiniAV_Audio_SetContextLostCallback(
  MiniAVAudioContextHandle context,
  MiniAVContextLostCallback callback,
  ffi.Pointer<ffi.Void> user_data,
) => MiniAVResultCode.fromValue(
  _MiniAV_Audio_SetContextLostCallback(context, callback, user_data),
);

@ffi.Native<
  ffi.Int Function(MiniAVDeviceChangeCallback, ffi.Pointer<ffi.Void>)
>(symbol: 'MiniAV_Loopback_SetDeviceChangeCallback')
external int _MiniAV_Loopback_SetDeviceChangeCallback(
  MiniAVDeviceChangeCallback callback,
  ffi.Pointer<ffi.Void> user_data,
);
MiniAVResultCode MiniAV_Loopback_SetDeviceChangeCallback(
  MiniAVDeviceChangeCallback callback,
  ffi.Pointer<ffi.Void> user_data,
) => MiniAVResultCode.fromValue(
  _MiniAV_Loopback_SetDeviceChangeCallback(callback, user_data),
);

@ffi.Native<
  ffi.Int Function(
    MiniAVLoopbackContextHandle,
    MiniAVContextLostCallback,
    ffi.Pointer<ffi.Void>,
  )
>(symbol: 'MiniAV_Loopback_SetContextLostCallback')
external int _MiniAV_Loopback_SetContextLostCallback(
  MiniAVLoopbackContextHandle context,
  MiniAVContextLostCallback callback,
  ffi.Pointer<ffi.Void> user_data,
);
MiniAVResultCode MiniAV_Loopback_SetContextLostCallback(
  MiniAVLoopbackContextHandle context,
  MiniAVContextLostCallback callback,
  ffi.Pointer<ffi.Void> user_data,
) => MiniAVResultCode.fromValue(
  _MiniAV_Loopback_SetContextLostCallback(context, callback, user_data),
);

@ffi.Native<
  ffi.Int Function(MiniAVDeviceChangeCallback, ffi.Pointer<ffi.Void>)
>(symbol: 'MiniAV_Screen_SetDisplayChangeCallback')
external int _MiniAV_Screen_SetDisplayChangeCallback(
  MiniAVDeviceChangeCallback callback,
  ffi.Pointer<ffi.Void> user_data,
);
MiniAVResultCode MiniAV_Screen_SetDisplayChangeCallback(
  MiniAVDeviceChangeCallback callback,
  ffi.Pointer<ffi.Void> user_data,
) => MiniAVResultCode.fromValue(
  _MiniAV_Screen_SetDisplayChangeCallback(callback, user_data),
);

@ffi.Native<
  ffi.Int Function(MiniAVDeviceChangeCallback, ffi.Pointer<ffi.Void>)
>(symbol: 'MiniAV_Screen_SetWindowChangeCallback')
external int _MiniAV_Screen_SetWindowChangeCallback(
  MiniAVDeviceChangeCallback callback,
  ffi.Pointer<ffi.Void> user_data,
);
MiniAVResultCode MiniAV_Screen_SetWindowChangeCallback(
  MiniAVDeviceChangeCallback callback,
  ffi.Pointer<ffi.Void> user_data,
) => MiniAVResultCode.fromValue(
  _MiniAV_Screen_SetWindowChangeCallback(callback, user_data),
);

@ffi.Native<
  ffi.Int Function(
    MiniAVScreenContextHandle,
    MiniAVContextLostCallback,
    ffi.Pointer<ffi.Void>,
  )
>(symbol: 'MiniAV_Screen_SetContextLostCallback')
external int _MiniAV_Screen_SetContextLostCallback(
  MiniAVScreenContextHandle context,
  MiniAVContextLostCallback callback,
  ffi.Pointer<ffi.Void> user_data,
);
MiniAVResultCode MiniAV_Screen_SetContextLostCallback(
  MiniAVScreenContextHandle context,
  MiniAVContextLostCallback callback,
  ffi.Pointer<ffi.Void> user_data,
) => MiniAVResultCode.fromValue(
  _MiniAV_Screen_SetContextLostCallback(context, callback, user_data),
);

@ffi.Native<
  ffi.Int Function(MiniAVDeviceChangeCallback, ffi.Pointer<ffi.Void>)
>(symbol: 'MiniAV_Input_SetGamepadChangeCallback')
external int _MiniAV_Input_SetGamepadChangeCallback(
  MiniAVDeviceChangeCallback callback,
  ffi.Pointer<ffi.Void> user_data,
);
MiniAVResultCode MiniAV_Input_SetGamepadChangeCallback(
  MiniAVDeviceChangeCallback callback,
  ffi.Pointer<ffi.Void> user_data,
) => MiniAVResultCode.fromValue(
  _MiniAV_Input_SetGamepadChangeCallback(callback, user_data),
);

enum MiniAVResultCode {
  MINIAV_SUCCESS(0),
  MINIAV_ERROR_UNKNOWN(-1),
  MINIAV_ERROR_INVALID_ARG(-2),
  MINIAV_ERROR_NOT_INITIALIZED(-3),
  MINIAV_ERROR_SYSTEM_CALL_FAILED(-4),
  MINIAV_ERROR_NOT_SUPPORTED(-5),
  MINIAV_ERROR_BUFFER_TOO_SMALL(-6),
  MINIAV_ERROR_INVALID_HANDLE(-7),
  MINIAV_ERROR_DEVICE_NOT_FOUND(-8),
  MINIAV_ERROR_DEVICE_BUSY(-9),
  MINIAV_ERROR_ALREADY_RUNNING(-10),
  MINIAV_ERROR_NOT_RUNNING(-11),
  MINIAV_ERROR_OUT_OF_MEMORY(-12),
  MINIAV_ERROR_TIMEOUT(-13),
  MINIAV_ERROR_DEVICE_LOST(-14),
  MINIAV_ERROR_FORMAT_NOT_SUPPORTED(-15),
  MINIAV_ERROR_INVALID_OPERATION(-16),
  MINIAV_ERROR_NOT_IMPLEMENTED(-17),
  MINIAV_ERROR_NOT_CONFIGURED(-18),
  MINIAV_ERROR_PORTAL_FAILED(-19),
  MINIAV_ERROR_STREAM_FAILED(-20),
  MINIAV_ERROR_PORTAL_CLOSED(-21),
  MINIAV_ERROR_USER_CANCELLED(-22),
  MINIAV_ERROR_PERMISSION_DENIED(-23);

  final int value;
  const MiniAVResultCode(this.value);
